--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML>
-<html lang= "es"> 
+<!DOCTYPE html>
+<html lang="es">
 	<head>
 		<title> Software III</title>
 		<meta charset= "UTF-8">
